created the api of users and profile tooo
